--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
 		"type": "git",
 		"url": "https://github.com/doubleedesign/styled-media-queries"
 	},
+	"keywords": ["styled-components", "css-in-js"],
 	"license": "MIT",
 	"scripts": {
 		"build": "tsc"
